--- a/TODO
+++ b/TODO
@@ -1,9 +1,11 @@
 ☐ Add <transition> to items for initial transition.
 
-☐ Finish the logic when there is no hover.
+☐ Set font on info container title.
 
 ☐ Finish CSS for the smallest screen, when the profile is above the grid.
 
 ☐ Links on profile should become smaller on small screen.
 
 ☐ Remove gray fill from logo letters?
+
+✔ Finish the logic when there is no hover. @done(20-06-21 17:47)
