--- a/TODO
+++ b/TODO
@@ -1,11 +1,10 @@
 ☐ Add <transition> to items for initial transition.
 
-☐ Finish CSS for the smallest screen, when the profile is above the grid.
-
 ☐ Select faster but with initial delay, only when there is no hover.
 
 ☐ Make covers of 500px.
 
+✔ Finish CSS for the smallest screen, when the profile is above the grid. @high @done(20-06-23 19:59)
 ✔ Links on profile should become smaller on small screen. Or make all the cover as SVG so it is responsive. @done(20-06-22 20:41)
 ✔ Set font on info container title. @done(20-06-21 20:54)
 ✔ Remove gray fill from logo letters? @done(20-06-21 20:54)
