Added static page curriculum files.

--- a/TODO
+++ b/TODO
@@ -4,6 +4,10 @@
 
 ☐ Make covers of 500px.
 
+☐ Add curriculum static page.
+
+☐ Make button to download and change to spanish in the side, out of the paper.
+
 ✔ Finish CSS for the smallest screen, when the profile is above the grid. @high @done(20-06-23 19:59)
 ✔ Links on profile should become smaller on small screen. Or make all the cover as SVG so it is responsive. @done(20-06-22 20:41)
 ✔ Set font on info container title. @done(20-06-21 20:54)
