--- a/TODO
+++ b/TODO
@@ -1,12 +1,13 @@
+☐ Add curriculum static page. @process
+
+☐ Button to change the curriculum to spanish.
+
 ☐ Add <transition> to items for initial transition.
 
 ☐ Select faster but with initial delay, only when there is no hover.
 
 ☐ Make covers of 500px.
 
-☐ Add curriculum static page.
-
-☐ Make button to download and change to spanish in the side, out of the paper.
 
 ✔ Finish CSS for the smallest screen, when the profile is above the grid. @high @done(20-06-23 19:59)
 ✔ Links on profile should become smaller on small screen. Or make all the cover as SVG so it is responsive. @done(20-06-22 20:41)
