--- a/TODO
+++ b/TODO
@@ -1,5 +1,9 @@
 ☐ Make item description text parsed from and HTML string to be able to create separate paragrafs and text styles.
 
+☐ When there is no hover in Chrome and from smartphone it doesn't work and the first click opens the item instead of showing the title first.
+
+☐ Set a max-height with scroll for the description container because in small screens it overflows. @high 
+
 ☐ Optional visible text on item links, it is important in cases where there is more than one link that is of the same type like two CodePen links. @high 
 
 ☐ Extract the array of project items data to an independent JS or JSON file. @high 
